<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>SoundPropertiesDialog</class>
 <widget class="QDialog" name="SoundPropertiesDialog">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>239</width>
    <height>534</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Sound Properties</string>
  </property>
  <property name="windowIcon">
   <iconset resource="../resources_editor.qrc">
    <normaloff>:/qtgameengine/icons/sound-file.png</normaloff>:/qtgameengine/icons/sound-file.png</iconset>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout_4">
   <item>
    <layout class="QFormLayout" name="formLayout">
     <item row="0" column="0">
      <widget class="QLabel" name="labelName">
       <property name="text">
        <string>&amp;Name:</string>
       </property>
       <property name="buddy">
        <cstring>lineEditName</cstring>
       </property>
      </widget>
     </item>
     <item row="0" column="1">
      <widget class="QLineEdit" name="lineEditName">
       <property name="toolTip">
        <string>The name of the sound</string>
       </property>
      </widget>
     </item>
    </layout>
   </item>
   <item>
    <layout class="QHBoxLayout" name="horizontalLayout" stretch="1,0,0">
     <item>
      <widget class="QPushButton" name="pushButtonLoad">
       <property name="toolTip">
        <string>Load the sound from a file</string>
       </property>
       <property name="text">
        <string>&amp;Load Sound</string>
       </property>
       <property name="icon">
        <iconset resource="../resources_editor.qrc">
         <normaloff>:/qtgameengine/icons/open.png</normaloff>:/qtgameengine/icons/open.png</iconset>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="pushButtonPlay">
       <property name="toolTip">
        <string>Play the sound</string>
       </property>
       <property name="text">
        <string notr="true"/>
       </property>
       <property name="icon">
        <iconset resource="../resources_editor.qrc">
         <normaloff>:/qtgameengine/icons/run.png</normaloff>:/qtgameengine/icons/run.png</iconset>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="pushButtonStop">
       <property name="toolTip">
        <string>Stop the sound</string>
       </property>
       <property name="text">
        <string notr="true"/>
       </property>
       <property name="icon">
        <iconset resource="../resources_editor.qrc">
         <normaloff>:/qtgameengine/icons/exit.png</normaloff>:/qtgameengine/icons/exit.png</iconset>
       </property>
      </widget>
     </item>
    </layout>
   </item>
   <item>
    <widget class="QPushButton" name="pushButtonSave">
     <property name="toolTip">
      <string>Save the sound to a file</string>
     </property>
     <property name="text">
      <string>Sa&amp;ve Sound</string>
     </property>
     <property name="icon">
      <iconset resource="../resources_editor.qrc">
       <normaloff>:/qtgameengine/icons/save.png</normaloff>:/qtgameengine/icons/save.png</iconset>
     </property>
    </widget>
   </item>
   <item>
    <widget class="QLabel" name="labelFilename">
     <property name="text">
      <string>Filename:</string>
     </property>
    </widget>
   </item>
   <item>
    <widget class="QGroupBox" name="groupBoxKind">
     <property name="toolTip">
      <string>Set the kind of this sound</string>
     </property>
     <property name="title">
      <string>Kind</string>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout">
      <item>
       <widget class="QRadioButton" name="radioButtonNormal">
        <property name="text">
         <string>Normal Sound</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QRadioButton" name="radioButtonMusic">
        <property name="text">
         <string>Background Music</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QRadioButton" name="radioButton3D">
        <property name="text">
         <string>3D Sound</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QRadioButton" name="radioButtonMultimedia">
        <property name="text">
         <string>Use multimedia player</string>
        </property>
       </widget>
      </item>
     </layout>
    </widget>
   </item>
   <item>
    <widget class="QGroupBox" name="groupBoxEffects">
     <property name="toolTip">
      <string>Set the effects to apply for the sound</string>
     </property>
     <property name="title">
      <string>Effects</string>
     </property>
     <layout class="QGridLayout" name="gridLayout">
      <item row="1" column="0">
       <widget class="QCheckBox" name="checkBoxFlanger">
        <property name="text">
         <string>Flanger</string>
        </property>
       </widget>
      </item>
      <item row="0" column="0">
       <widget class="QCheckBox" name="checkBoxChorus">
        <property name="text">
         <string>Chorus</string>
        </property>
       </widget>
      </item>
      <item row="2" column="0">
       <widget class="QCheckBox" name="checkBoxGargle">
        <property name="text">
         <string>Gargle</string>
        </property>
       </widget>
      </item>
      <item row="0" column="1">
       <widget class="QCheckBox" name="checkBoxEcho">
        <property name="text">
         <string>Echo</string>
        </property>
       </widget>
      </item>
      <item row="1" column="1">
       <widget class="QCheckBox" name="checkBoxReverb">
        <property name="text">
         <string>Reverb</string>
        </property>
       </widget>
      </item>
     </layout>
    </widget>
   </item>
   <item>
    <layout class="QFormLayout" name="formLayout_2">
     <item row="0" column="0">
      <widget class="QLabel" name="labelVolume">
       <property name="text">
        <string>Volume:</string>
       </property>
       <property name="buddy">
        <cstring>horizontalSliderVolume</cstring>
       </property>
      </widget>
     </item>
     <item row="0" column="1">
      <widget class="QSlider" name="horizontalSliderVolume">
       <property name="toolTip">
        <string>Indicates the default volume for the sound</string>
       </property>
       <property name="maximum">
        <number>100</number>
       </property>
       <property name="value">
        <number>100</number>
       </property>
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
      </widget>
     </item>
     <item row="1" column="0">
      <widget class="QLabel" name="labelPan">
       <property name="text">
        <string>Pan:</string>
       </property>
       <property name="buddy">
        <cstring>horizontalSliderPan</cstring>
       </property>
      </widget>
     </item>
     <item row="1" column="1">
      <widget class="QSlider" name="horizontalSliderPan">
       <property name="toolTip">
        <string>Indicates the default pan for the sound</string>
       </property>
       <property name="minimum">
        <number>-100</number>
       </property>
       <property name="maximum">
        <number>100</number>
       </property>
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
       <property name="invertedAppearance">
        <bool>false</bool>
       </property>
       <property name="invertedControls">
        <bool>false</bool>
       </property>
      </widget>
     </item>
    </layout>
   </item>
   <item>
    <widget class="QCheckBox" name="checkBoxPreload">
     <property name="toolTip">
      <string>Indicates whether to preload the sound when the game starts</string>
     </property>
     <property name="text">
      <string>&amp;Preload</string>
     </property>
     <property name="checked">
      <bool>true</bool>
     </property>
    </widget>
   </item>
   <item>
    <layout class="QHBoxLayout" name="horizontalLayout_2">
     <item>
      <spacer name="horizontalSpacer">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
       <property name="sizeHint" stdset="0">
        <size>
         <width>40</width>
         <height>20</height>
        </size>
       </property>
      </spacer>
     </item>
     <item>
      <widget class="QPushButton" name="pushButtonEdit">
       <property name="toolTip">
        <string>Edit the sound using an external sound editor</string>
       </property>
       <property name="text">
        <string>&amp;Edit Sound</string>
       </property>
       <property name="icon">
        <iconset resource="../resources_editor.qrc">
         <normaloff>:/qtgameengine/icons/sound.png</normaloff>:/qtgameengine/icons/sound.png</iconset>
       </property>
      </widget>
     </item>
     <item>
      <spacer name="horizontalSpacer_2">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
       <property name="sizeHint" stdset="0">
        <size>
         <width>40</width>
         <height>20</height>
        </size>
       </property>
      </spacer>
     </item>
    </layout>
   </item>
   <item>
    <widget class="QDialogButtonBox" name="buttonBox">
     <property name="standardButtons">
      <set>QDialogButtonBox::Ok</set>
     </property>
     <property name="centerButtons">
      <bool>true</bool>
     </property>
    </widget>
   </item>
  </layout>
 </widget>
 <resources>
  <include location="../resources_editor.qrc"/>
 </resources>
 <connections>
  <connection>
   <sender>buttonBox</sender>
   <signal>accepted()</signal>
   <receiver>SoundPropertiesDialog</receiver>
   <slot>accept()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>119</x>
     <y>480</y>
    </hint>
    <hint type="destinationlabel">
     <x>119</x>
     <y>266</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>buttonBox</sender>
   <signal>rejected()</signal>
   <receiver>SoundPropertiesDialog</receiver>
   <slot>reject()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>119</x>
     <y>512</y>
    </hint>
    <hint type="destinationlabel">
     <x>119</x>
     <y>266</y>
    </hint>
   </hints>
  </connection>
 </connections>
</ui>
